<resources>
    <string name="app_name">TimeTable Manager</string>
    <string name="email_id">Email id</string>
    <string name="pswd">Password</string>
    <string name="old_pswd">Enter Old Password</string>
    <string name="new_pswd">Enter New Password</string>
    <string name="confirm_pswd">Confirm Password</string>
    <string name="forg_pswd_login">Forgot password?</string>
    <string name="save">SAVE</string>
    <string name="apply_changes">APPLY</string>
    <string name="submit">Submit</string>
    <string name="input_edit_name">Enter your name</string>
    <string name="input_edit_email">Enter your email id</string>
    <string name="task_title">Title</string>
    <string name="add_task">ADD A TASK</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="task_des">Description</string>
    <string name="task_time">Select Time</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail id</string>
    <string name="change_pswd">CHANGE PASSWORD</string>
    <string name="edit_profile">Edit profile</string>
    <string name="notification">Notifications</string>
    <string name="profile">Profile</string>
    <string name="forg_pass">FORGOT PASSWORD</string>
    <string name="forg_pass_btn">SEND LINK</string>
    <string name="forg_pass_txt">*A link to reset your password will be sent the entered email id on clicking the <b>\'SEND LINK\'</b> button.</string>
    <string name="tasks"><b>Tasks</b></string>
    <string name="postponed"><b>Postponed</b></string>
    <string name="status"><b>Status</b></string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="edit_task_info">Edit Task Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

</resources>