<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/task_title"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/edit_des"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_des"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/task_des"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/edit_title" />

    <Button
        android:id="@+id/btn_edit_time"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#EBE9E9"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_vertical"
        android:hint="@string/task_time"
        android:textColor="@color/ic_launcher_background"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edit_des"
        app:layout_constraintTop_toBottomOf="@+id/edit_des" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/task_title"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/task_des"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_des"
        app:layout_constraintStart_toStartOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/time"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_edit_time"
        app:layout_constraintStart_toStartOf="@+id/textView17" />

</androidx.constraintlayout.widget.ConstraintLayout>