<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/forg_pass"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email_fp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="245dp"
        android:gravity="center_horizontal"
        android:hint="@string/email_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@android:drawable/sym_action_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email_fp"
            android:layout_width="285dp"
            android:layout_height="52dp"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="92dp"
        android:layout_height="80dp"
        android:layout_marginTop="68dp"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/forgot_password_icon_15"
        android:contentDescription="@string/forg_pass" />

    <Button
        android:id="@+id/send_link_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:foregroundGravity="center_horizontal"
        android:text="@string/forg_pass_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_email_fp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="342dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:foregroundGravity="center_horizontal"
        android:text="@string/forg_pass_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_email_fp" />
</androidx.constraintlayout.widget.ConstraintLayout>