<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePswdActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="154dp"
                android:layout_height="147dp"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/password_change"
                app:tint="@color/project_green" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:gravity="center_horizontal"
                android:text="@string/change_pswd"
                android:fontFamily="serif"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/old_password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:hint="@string/old_pswd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@android:drawable/ic_lock_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_old_password"
                    android:layout_width="285dp"
                    android:layout_height="52dp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:gravity="center_horizontal"
                android:hint="@string/new_pswd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/old_password_layout"
                app:startIconDrawable="@android:drawable/ic_lock_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_new_password"
                    android:layout_width="285dp"
                    android:layout_height="52dp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:gravity="center_horizontal"
                android:hint="@string/confirm_pswd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_password_layout"
                app:startIconDrawable="@android:drawable/ic_lock_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="285dp"
                    android:layout_height="52dp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submit_pswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_confirm_password" />

            <TextView
                android:id="@+id/forgot_pswd"
                android:layout_width="124dp"
                android:layout_height="30dp"
                android:layout_marginTop="3dp"
                android:gravity="end"
                android:text="@string/forg_pswd_login"
                android:textColor="@color/project_green"
                app:layout_constraintEnd_toEndOf="@+id/old_password_layout"
                app:layout_constraintTop_toBottomOf="@+id/old_password_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>