<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="60dp"
                android:foregroundGravity="clip_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile"
                app:tint="@color/ic_launcher_background" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_photo_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:layout_marginTop="88dp"
                android:backgroundTint="@color/project_green"
                android:clickable="true"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5"
                app:srcCompat="@drawable/camera"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:text="@string/name"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/email_id"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="24dp"
                android:layout_height="16dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/name"
                app:srcCompat="@drawable/name"
                app:tint="@color/ic_launcher_background" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="31dp"
                android:layout_height="22dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/email"
                app:srcCompat="@android:drawable/sym_action_email"
                app:tint="@color/ic_launcher_background" />

            <Button
                android:id="@+id/btn_change_pswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/ic_launcher_background"
                android:foregroundGravity="center_horizontal"
                android:gravity="center"
                android:text="@string/change_pswd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_edit_name"
                android:layout_width="53dp"
                android:layout_height="55dp"
                android:layout_marginEnd="64dp"
                android:clickable="true"
                android:foregroundGravity="center"
                app:backgroundTint="@color/white"
                app:elevation="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/edit"
                app:tint="@color/project_green" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_edit_email"
                android:layout_width="53dp"
                android:layout_height="55dp"
                android:layout_marginEnd="64dp"
                android:clickable="true"
                android:foregroundGravity="center"
                app:backgroundTint="@color/white"
                app:elevation="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/edit"
                app:tint="@color/project_green" />

            <Button
                android:id="@+id/apply_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/apply_changes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_change_pswd" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>